--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 55%;"data-percent="55%"></div>
+                <div class="skill-progress-fill" style="--initial-percent: 55%;"data-percent="55%"></div>
               </div>
 
             </li>
