--- a/index.html
+++ b/index.html
@@ -239,6 +239,18 @@
               </div>
 
             </li>
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">C++</h5>
+                <data value="80">70%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="--initial-percent: 75%;"data-percent="75%"></div>
+              </div>
+
+            </li>
 
             <li class="skills-item">
 
@@ -911,7 +923,7 @@
 
 
   <!--
-    - custom js link
+    - custom js linkss
   -->
   <script src="./assets/js/script.js"></script>
 
