--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
         <section class="about-text">
           <p>
-            Innovative Full-Stack Developer with Strong Python, Django, C, SQL, HTML, CSS, and Git Skills
+            Innovative Full-Stack Developer with Data Structures and Algorithm Skills, Proficient in C++ Programming, Django and Front-End Technologies and Git Skills
              Seeking Opportunities to Contribute and Grow with a Forward-Thinking Company
           </p>
         </section>
