--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">PHP</h5>
+                <h5 class="h5">JavaScript</h5>
                 <data value="50">50%</data>
               </div>
 
