--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">development</h4>
+                <h4 class="h4 service-item-title">Automation</h4>
 
                
                 </p>
