--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
 
               <p class="timeline-text">
                Role - Fullstack
-               <a href="https://litheesh.selfmade.one/"> click to visit site!</a>
+               <a href="">!</a>
               </p>
 
             </li>
