--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                   </style>
                 </head>
                Role - Fullstack
-               <a href="https://litheesh.selfmade.one/"> click to visit site!</a>
+               <a href=""> !</a>
               </p>
 
             </li>
