--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                   </style>
                 </head>
                Role - Fullstack
-               <a href=""> !</a>
+               <a href="https://litheesh.selfmade.one/" onclick="window.open(this.href); return false;">Click here</a>
               </p>
 
             </li>
@@ -370,6 +370,19 @@
               <p class="timeline-text">
                built by opencv,pandas
               
+              </p>
+
+            </li>
+               <li class="timeline-item">
+                 <head>
+                  <style>
+                    a {
+                      color: #3f7551; /* blue color */
+                    }
+                  </style>
+                </head>    
+               click to view resume
+               <a href="https://litheesh.selfmade.one/resume" onclick="window.open(this.href); return false;">Resume</a>
               </p>
 
             </li>
@@ -502,11 +515,7 @@
 
               <div data-modal-text>
                 <p>
-                  Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
-                  lot of experience
-                  and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                  consectetur adipiscing
-                  elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                 
                 </p>
               </div>
 
@@ -617,7 +626,7 @@
 
               <p class="timeline-text">
                Role - Fullstack
-               <a href="">!</a>
+               <a href="https://litheesh.selfmade.one/" onclick="window.open(this.href); return false;">Click here</a>
               </p>
 
             </li>
