--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                   </style>
                 </head>
                Role - Fullstack
-               <a href="https://litheesh.selfmade.one/" onclick="window.open(this.href); return false;">Click here</a>
+               <a href="https://litheesh.selfmade.one/" onclick="window.open(this.href); return false;">Please click to view this project.</a>
               </p>
 
             </li>
@@ -381,7 +381,7 @@
                     }
                   </style>
                 </head>    
-               click to view resume
+               <h4 class="h4 timeline-item-title">Recruitment management system </h4>
                <a href="https://litheesh.selfmade.one/resume" onclick="window.open(this.href); return false;">Resume</a>
               </p>
 
@@ -626,7 +626,7 @@
 
               <p class="timeline-text">
                Role - Fullstack
-               <a href="https://litheesh.selfmade.one/" onclick="window.open(this.href); return false;">Click here</a>
+               <a href="https://litheesh.selfmade.one/" onclick="window.open(this.href); return false;">Please click to view this project.</a>
               </p>
 
             </li>
