--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                 <head>
                   <style>
                     a {
-                      color: #3f7551; /* blue color */
+                      color: #32e512; /* blue color */
                     }
                   </style>
                 </head>
@@ -377,7 +377,7 @@
                  <head>
                   <style>
                     a {
-                      color: #3f7551; /* blue color */
+                      color: #32e512; /* blue color */
                     }
                   </style>
                 </head>    
