--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                     }
                   </style>
                 </head>    
-               <h4 class="h4 timeline-item-title">Recruitment management system </h4>
+               <h4 class="h4 timeline-item-title">click to view resume </h4>
                <a href="https://litheesh.selfmade.one/resume" onclick="window.open(this.href); return false;">Resume</a>
               </p>
 
