--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 
-<body style="background-image: url('https://png.pngtree.com/background/20210709/original/pngtree-spider-web-web-cobweb-design-picture-image_534712.jpg')">
+<body style="background-image: url('https://static.vecteezy.com/system/resources/previews/013/087/516/non_2x/diagonal-golden-line-glass-cube-on-black-background-illustration-of-website-banner-poster-sign-corporate-business-social-media-post-billboard-agency-advertising-media-motion-video-animation-wave-vector.jpg')">
 
 
   <!--
